[IMS-152]-get summary server
