# ims-server/src/controllers/IncidentController.ts
@@ -62,5 +62,16 @@ export default class IncidentController {
       res.status(500).json({ message: error });
     }
   }
+  async getSummaryIncident(req: Request, res: Response): Promise<void> {
+    try {
+       const summary: IIncident | null = await incidentService.getSummaryIncident(req.params.id);
+       if (summary instanceof Error) {
+         res.status(404).json({ message: summary, error: true });
+      }
+      else res.status(200).json(summary);
+    } catch (error: any) {
+      res.status(500).json({ message: error });
+    }
+  }
 
 }
